電子書籍をスキャンするところまで完了
